--- a/src/pages/event/event.html
+++ b/src/pages/event/event.html
@@ -8,6 +8,7 @@
 
   <ion-navbar color="primary">
     <ion-title>{{events[id].name}}</ion-title>
+    
   </ion-navbar>
 
 </ion-header>
@@ -15,6 +16,7 @@
 
 <ion-content>
 	<div class="event-map" id="map"></div>
+	<div style="width: 100%;height: 300px;"></div>
 	<div class="fund-container">
 		<h1>Funded</h1>
 		<p>by {{events[id].sponsors}}</p>
@@ -43,9 +45,22 @@
 		</ion-item>
 		<ion-item tappable>
 			<ion-avatar item-left>
+		      <img src="https://cdn2.iconfinder.com/data/icons/circle-icons-1/64/heart-256.png">
+		    </ion-avatar>
+		    <h2>{{events[id].likes}} Likes</h2>
+		</ion-item>
+		<ion-item tappable>
+			<ion-avatar item-left>
 		      <img src="https://cdn2.iconfinder.com/data/icons/flat-icons-19/512/Flower_pot.png">
 		    </ion-avatar>
 		    <h2>{{events[id].points}} EcoPoints</h2>
 		</ion-item>
 	</ion-list>
+	<ion-grid class="event-buttons">
+		<ion-row>
+			<button ion-button full><ion-icon name="ios-heart" style="margin-right: 12px;"></ion-icon>Like</button>
+			<button ion-button full>Join</button>
+			<button ion-button full>Watch<ion-icon name="md-eye" style="margin-left: 12px;"></ion-icon></button>
+		</ion-row>
+	</ion-grid>
 </ion-content>
