--- a/src/pages/market/market.html
+++ b/src/pages/market/market.html
@@ -6,13 +6,38 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>market</ion-title>
+  <ion-navbar color="primary">
+    <ion-title>Market</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
-
+<ion-content>
+	<div style="position: fixed;top: 55px;right:0;left: 0;z-index: -1;height: 300px;"><div class="event-map" id="marketMap"></div></div>
+	<div style="height: 100%;margin-top:300px;background-color: #fff;">
+		<ion-searchbar (input)="onSearchInput($event)" class="searchbar"></ion-searchbar>
+		<ion-list class="fullwidth-list">
+			<ion-item-divider light>Near you</ion-item-divider>
+			<ion-item *ngFor="let event of filteredEvents" tappable (click)="openEvent(event.id)">
+			    <ion-avatar item-left>
+					<ion-badge *ngIf="event.likes" color="secondary" style="position: absolute;bottom: 7px;left: 10px;">{{event.likes}}<ion-icon name="ios-heart" style="color:red;font-size:1.3rem;margin-left: 2px;"></ion-icon></ion-badge>
+					<img src="{{event.icon}}">
+				</ion-avatar>
+				<h2>{{event.name}}</h2>
+				<p>{{event.street}}, {{event.place}}, {{event.city}}</p>
+				<ion-badge *ngIf="event.friends" item-right>{{event.friends}} Friends</ion-badge>
+			</ion-item>
+			<ion-item-divider light>Other Events</ion-item-divider>
+			<ion-item *ngFor="let event of otherEvents" tappable>
+			    <ion-avatar item-left>
+					<ion-badge *ngIf="event.likes" color="secondary" style="position: absolute;bottom: 7px;left: 10px;">{{event.likes}}<ion-icon name="ios-heart" style="color:red;font-size:1.3rem;margin-left: 2px;"></ion-icon></ion-badge>
+					<img src="{{event.icon}}">
+				</ion-avatar>
+				<h2>{{event.name}}</h2>
+				<p>{{event.street}}, {{event.place}}, {{event.city}}</p>
+				<ion-badge *ngIf="event.friends" item-right>{{event.friends}} Friends</ion-badge>
+			</ion-item>
+		</ion-list>
+	</div>
 </ion-content>
