added resources functionality

--- a/src/pages/market/market.html
+++ b/src/pages/market/market.html
@@ -7,7 +7,17 @@
 <ion-header>
 
   <ion-navbar color="primary">
-    <ion-title>Market</ion-title>
+	<ion-buttons left>
+	    <button ion-button color="light" icon-only clear menuToggle>
+			<ion-icon name="md-menu" tappable></ion-icon>
+		</button>
+	</ion-buttons>
+    <ion-title style="text-align: center;">Eco-Market</ion-title>
+    <ion-buttons end>
+	    <button ion-button color="light" icon-only clear menuToggle>
+			<ion-icon name="md-menu" tappable></ion-icon>
+		</button>
+	</ion-buttons>
   </ion-navbar>
 
 </ion-header>
