--- a/src/pages/event/event.html
+++ b/src/pages/event/event.html
@@ -21,7 +21,14 @@
 		<h1 *ngIf="fundPercentage==100">Funded</h1>
 		<h1 *ngIf="fundPercentage!=100"> Not yet funded</h1>
 		<p>{{events[id].sponsors}}</p>
-		<figure class="chart-one animate">
+		<figure class="chart-one animate" *ngIf="fundPercentage==100">
+			<svg role="img" xmlns="http://www.w3.org/2000/svg">
+				<circle class="circle-background"/>
+				<circle class="circle-foreground"/>
+			</svg>
+			<figcaption>25% of all males like donuts.</figcaption>
+		</figure>
+		<figure class="chart-two animate" *ngIf="fundPercentage!=100">
 			<svg role="img" xmlns="http://www.w3.org/2000/svg">
 				<circle class="circle-background"/>
 				<circle class="circle-foreground"/>
