--- a/src/pages/event-creator/event-creator.html
+++ b/src/pages/event-creator/event-creator.html
@@ -4,6 +4,13 @@
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
 -->
+<div class="successOverlay" *ngIf="eventAnimation.display">
+	<div  class="circle" [class.circleIn]="eventAnimation.circleIn"></div>
+	<div class="contentStuff" [class.fadeIn]="eventAnimation.fadeIn">
+		<ion-spinner name="crescent" color="primary" *ngIf="eventAnimation.loaderShow"></ion-spinner>
+		<h2 *ngIf="eventAnimation.textShow" [class.fadeIn]="eventAnimation.textFade">Event created.</h2>
+	</div>
+</div>
 <ion-header>
 
   <ion-navbar color="primary">
@@ -14,7 +21,7 @@
     </ion-buttons>
     <ion-title style="text-align: center;padding-right: 10px;">Create Event</ion-title>
     <ion-buttons end>
-	    <button ion-button clear>
+	    <button ion-button clear (click)="submitForm()">
 	    	<ion-icon name="md-create" style="font-size: 2.3rem;margin-right: 6px"></ion-icon>
 	    </button>
     </ion-buttons>
@@ -33,7 +40,7 @@
 			</div>
 		</div>
 
-		<form (ngSubmit)="onSubmit()" *ngIf="eventForm.active">
+		<form>
 			<ion-list inset style="margin: 0;" class="eventForm">
 
 				<ion-list-header style="background-color: #EDEDED;">
@@ -96,7 +103,7 @@
 						Add Resource 
 						<ion-icon name="md-send"></ion-icon>
 					</button>
-					<ion-input [(ngModel)]="resource.resourceName" name="resource" (keyup.enter)="addResource()" class="resource-input" type="text" placeholder=""></ion-input>
+					<ion-input [(ngModel)]="resource.resourceName" name="resource" (keyup.enter)="addResource()" #input class="resource-input" type="text" placeholder=""></ion-input>
 				</ion-item>
 
 				<ion-item style="display: none;">
