--- a/src/pages/market/market.html
+++ b/src/pages/market/market.html
@@ -32,10 +32,10 @@
 			<ion-item *ngFor="let event of filteredEvents" tappable (click)="openEvent(event.id)">
 			    <ion-avatar item-left>
 					<ion-badge *ngIf="event.likes" color="secondary" style="position: absolute;bottom: 7px;left: 10px;">{{event.likes}}<ion-icon name="ios-heart" style="color:red;font-size:1.3rem;margin-left: 2px;"></ion-icon></ion-badge>
-					<img src="{{event.icon}}">
+					<img src="https://cdn0.iconfinder.com/data/icons/citycons/150/Citycons_lighthouse-256.png">
 				</ion-avatar>
 				<h2>{{event.name}}</h2>
-				<p>{{event.street}}, {{event.place}}, {{event.city}}</p>
+				<p>{{event.address}}</p>
 				<ion-badge *ngIf="event.friends" item-right>{{event.friends}} Friends</ion-badge>
 			</ion-item>
 			<ion-item-divider light>Other Events</ion-item-divider>
