added firebase to the 'my-events'-page

--- a/src/pages/event/event.html
+++ b/src/pages/event/event.html
@@ -43,7 +43,8 @@
 			<ion-avatar item-left>
 		      <img src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/map-256.png">
 		    </ion-avatar>
-		    <h2>{{event.address}}</h2>
+		    <h2>{{event.place}}</h2>
+		    <p>{{event.region}}</p>
 		</ion-item>
 		<ion-item tappable>
 			<ion-avatar item-left>
