--- a/src/pages/market/market.html
+++ b/src/pages/market/market.html
@@ -38,6 +38,13 @@
 				<p>{{event.address}}</p>
 				<ion-badge *ngIf="event.friends" item-right>{{event.friends}} Friends</ion-badge>
 			</ion-item>
+			<ion-item *ngIf="!filteredEvents.length > 0" tappable>
+				<ion-avatar item-left>
+					<img src="https://cdn2.iconfinder.com/data/icons/circle-icons-1/64/roadblock-256.png">
+				</ion-avatar>
+				<h2>No Events</h2>
+				<p>More events coming soon...</p>
+			</ion-item>
 			<ion-item-divider light>Other Events</ion-item-divider>
 			<ion-item *ngFor="let event of otherEvents" tappable>
 			    <ion-avatar item-left>
@@ -47,6 +54,13 @@
 				<h2>{{event.name}}</h2>
 				<p>{{event.street}}, {{event.place}}, {{event.city}}</p>
 				<ion-badge *ngIf="event.friends" item-right>{{event.friends}} Friends</ion-badge>
+			</ion-item>
+			<ion-item *ngIf="!otherEvents.length > 0" tappable>
+				<ion-avatar item-left>
+					<img src="https://cdn2.iconfinder.com/data/icons/circle-icons-1/64/roadblock-256.png">
+				</ion-avatar>
+				<h2>No Events</h2>
+				<p>More events coming soon...</p>
 			</ion-item>
 		</ion-list>
 	</div>
