--- a/src/pages/event/event.html
+++ b/src/pages/event/event.html
@@ -87,7 +87,7 @@
 				<ion-fab-list side="left">
 					<button ion-fab><ion-icon name="md-eye"></ion-icon></button>
 					<button ion-fab><ion-icon name="md-git-pull-request"></ion-icon></button>
-					<button ion-fab><ion-icon name="ios-heart"></ion-icon></button>
+					<button ion-fab><ion-icon name="ios-heart" (click)="likeEvent()"></ion-icon></button>
 					<button ion-fab><ion-icon name="md-share"></ion-icon></button>
 				</ion-fab-list>
 			</ion-fab>
