fixed picture loading issue on mobile devices

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -26,7 +26,7 @@
 
 <ion-content>
 	<div class="profile-dashboard">
-		<img class="avatar" src="/assets/man.png" />
+		<img class="avatar" src="http://image.flaticon.com/icons/svg/236/236832.svg" />
 		<p>Developer, Entrepeneur</p>
 		<p>Zürich, CH</p>
 	</div>
